Fix response text element sizing and overflow

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -56,6 +56,10 @@ button {
   padding: 3px 10px;
 }
 
+.hidden {
+  display: none;
+}
+
 #wheel-container {
   display: block;
   height: 1724px;
@@ -109,7 +113,7 @@ button {
   padding: 10px 0;
 }
 
-.step-text{
+.step-text, .step-response-text{
   font-size: 9px;
 }
 
@@ -119,6 +123,16 @@ button {
   position: absolute;
 }
 
+.step-response-container {
+  bottom: 0;
+  height: 100%;
+  position: relative;
+}
+
+.step-response-btn {
+  font-size: 9px;
+}
+
 .step-continue-btn {
   border-radius: 2px;
   font-family: 'merriweather', Georgia, serif;
@@ -126,8 +140,12 @@ button {
   padding: 2px 5px;
 }
 
-.response-text {
-  padding-top: 10px;
+.step-response-text {
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding-top: 8px;
+  word-wrap: break-word;
 }
 
 .resultset-header {
